--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -50,6 +50,17 @@ Shell shell = new SSH("example.com", 22, "username", "key...");
 String stdout = new Shell.Plain(shell).exec("echo 'Hello, world!'");
 +--
 
+  There is also a convenient {{{/apidocs-${project.version}/com/jcabi/ssh/SSHD.html}<<<SSHD>>>}}
+  class, a runner of ssh daemon, for unit testing:
+
++--
+try (SSHD sshd = new SSHD()) {
+  String uptime = new Shell.Plain(
+    SSH(sshd.host(), sshd.login(), sshd.port(), sshd.key())
+ ).exec("uptime");
+}
++--
+
   The only dependency you need is
   (you can also download
   {{{http://repo1.maven.org/maven2/com/jcabi/jcabi-ssh/${project.version}/jcabi-ssh-${project.version}.jar}<<<jcabi-ssh-${project.version}.jar>>>}}
